--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,8 @@ pages:
   script:
     - bundle install
     - export LANG=en_US.UTF-8
-    - echo $LANG
+    - export LC_CTYPE=en_US.UTF-8
+    - echo $LANG $LC_CTYPE
     - nanoc compile 
     - cp -a output/* public/
   artifacts:
