neue kapitel qualität: datenschutz und qualität: barrierefreiheit, OWASP neu sortieret, aber neue Kapitel noch leer

--- a/Rules
+++ b/Rules
@@ -195,12 +195,16 @@ class Nanoc3::Filter
       match
     end
 
+    def u_esc(s)
+      URI.escape(s).gsub(/\+/, '%2B').gsub(/\[/, '%5B').gsub(/\]/, '%5D')
+    end
+
     def replace_with_link(name, pattern)
       match = scan_until %r{</patterntester>}
       if match and match.pre_match then
         data = match.pre_match;
         data_params = data.split(/\n/).map{|d| "list[]=#{d}" }.join("&")
-        out = "<a href='/images/match.html?pattern=#{URI.escape(pattern).gsub(/\+/, '%2B')}&listname=#{URI.escape name}&#{URI.escape data_params}'>RegEx Tester: /#{CGI.escapeHTML(pattern).gsub(/\|/, "&#124;")}/</a>"
+        out = "<a href='/images/match.html?pattern=#{u_esc(pattern)}&listname=#{u_esc name}&#{u_esc data_params}'>RegEx Tester: /#{CGI.escapeHTML(pattern).gsub(/\|/, "&#124;")}/</a>"
         @output << out
       end
     end
