--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,11 @@ pages:
   script:
     - cp Gemfile.gitlab-ci Gemfile
     - bundle install  -j4
+    - export LC_ALL=en_US.UTF-8
     - export LANG=en_US.UTF-8
+    - export LANGUAGE=en_US.UTF-8
     - export LC_CTYPE=en_US.UTF-8
-    - echo $LANG $LC_CTYPE
+    - echo $LC_ALL $LANG $LANGUAGE $LC_CTYPE
     - nanoc compile
     - cp -a output/* public/
   artifacts:
