--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ pages:
     - export LANGUAGE=en_US.UTF-8
     - export LC_CTYPE=en_US.UTF-8
     - echo $LC_ALL $LANG $LANGUAGE $LC_CTYPE
+    - locale
     - nanoc compile
     - cp -a output/* public/
   artifacts:
