prepare to remove jquery

--- a/Rules
+++ b/Rules
@@ -322,7 +322,7 @@ preprocess do
     "---",
     "grafik",
     "javascript",
-    "applied-jquery-and-css",
+    "applied-js-and-css",
     "json",
     "xml",
     "---",
