neues Kapitel zu mobile in vorbereitung

--- a/Rules
+++ b/Rules
@@ -330,7 +330,8 @@ preprocess do
     "wordpress",    
     "apache", 
     "advanced-javascript",
-    "qualitaet",
+    "mobile",    
+    "qualitaet"
   ]
 
   @chapters = {}
