--- a/.github/workflows/build-nanoc.yml
+++ b/.github/workflows/build-nanoc.yml
@@ -1,9 +1,11 @@
-name: My workflow
-on: [push, pull_request]
+name: Build Static Site with Nanoc
+on: [push]
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
+    - name: Install libcurl
+      run: sudo apt-get install libcurl4 libcurl3-gnutls libcurl4-openssl-dev
     - uses: actions/checkout@v2
     - uses: ruby/setup-ruby@v1
       with:
