--- a/.github/workflows/build-nanoc.yml
+++ b/.github/workflows/build-nanoc.yml
@@ -11,4 +11,10 @@ jobs:
       with:
         ruby-version: 2.7.1 # Not needed with a .ruby-version file
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-    - run: bundle exec nanoc compile
+    - name: compile
+      run: bundle exec nanoc compile
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./output
