--- a/.github/workflows/build-nanoc.yml
+++ b/.github/workflows/build-nanoc.yml
@@ -4,17 +4,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Install libcurl
-      run: sudo apt-get install libcurl4 libcurl3-gnutls libcurl4-openssl-dev
-    - uses: actions/checkout@v2
-    - uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: 2.7.1 # Not needed with a .ruby-version file
-        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-    - name: compile
-      run: bundle exec nanoc compile
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./output
+      - name: Install libcurl
+        run: sudo apt-get install libcurl4 libcurl3-gnutls libcurl4-openssl-dev
+      - uses: actions/checkout@v2
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 2.7.1 # Not needed with a .ruby-version file
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+      - name: compile
+        run: bundle exec nanoc compile
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.PERSONAL_TOKEN }}
+          external_repository: web-development/web-development.github.io.git
+          publish_branch: master
+          publish_dir: ./output
