--- a/.github/workflows/build-nanoc.yml
+++ b/.github/workflows/build-nanoc.yml
@@ -3,6 +3,7 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: Deploy    
     steps:
       - name: Install libcurl
         run: sudo apt-get install libcurl4 libcurl3-gnutls libcurl4-openssl-dev
