github actions: fix external_repository

--- a/.github/workflows/build-nanoc.yml
+++ b/.github/workflows/build-nanoc.yml
@@ -18,6 +18,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.PERSONAL_TOKEN }}
-          external_repository: web-development/web-development.github.io.git
+          external_repository: web-development/web-development.github.io
           publish_branch: master
           publish_dir: ./output
