--- a/.github/workflows/build-nanoc.yml
+++ b/.github/workflows/build-nanoc.yml
@@ -5,8 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     environment: Deploy    
     steps:
+      - name: apt update
+        run: sudo apt-get update
       - name: Install libcurl
-        run: sudo apt-get install libcurl4 libcurl3-gnutls
+        run: sudo apt-get install libcurl4 libcurl3-gnutls libcurl4-openssl-dev
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
