--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 pages:
   tags:
-    - ruby-3-2
+    - ruby-3-2-2
   stage: deploy
   script:
     - sudo apt-get install libcurl4 libcurl3-gnutls libcurl4-openssl-dev
